--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:/VenturaAdrian888.github.io/Reactjs.To-do-list",
+  "homepage": "https://VenturaAdrian888.github.io/Reactjs.To-do-list",
   "name": "todo-list",
   "version": "0.1.0",
   "private": true,
